--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -4,6 +4,7 @@
     margin: 15px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .form {
@@ -13,7 +14,6 @@
     width: 500px;
     justify-items: center;
     margin: 25px;
-    margin-left: 100px;
 }
 
 .input {
